Adicionando fundo preto programado

--- a/assets/css/acesso.css
+++ b/assets/css/acesso.css
@@ -69,5 +69,5 @@ p {
 }
 
 .content-center #btn-submit:active {
-    background-color: #61988E;/*Mudar a cor ao clicar no botton*/
+    background-color: #61988E;/*Mudar a cor ao clicar no bottom*/
 }
