--- a/assets/css/acesso.css
+++ b/assets/css/acesso.css
@@ -9,6 +9,9 @@ body {
     background-attachment: fixed;
     background-size: 30%;/*Controle do fundo*/
 }
+div#bloco{
+    margin-top: 120px;
+}
 
 h1 {
     font-size: .9em;
@@ -48,9 +51,9 @@ p {
 }
 
 .content-center input {
-    border-bottom-color: #CCC;
-    border-bottom-style: solid;
-    border-bottom-width: 2px;
+    border-bottom: #CCC solid 2px;
+    /*border-bottom-style: solid;
+    border-bottom-width: 2px;*/
     margin-bottom: 10px;
 }
 
